@@ -452,7 +452,7 @@ format=js
 minified=1
 mtime=1472501152
 [sass:sass/main.scss]
-checksum=63cd4d6ba1
+checksum=ff235b92a5
 format=css
 minified=0
 mtime=1472668085
