@@ -4803,6 +4803,10 @@ div.autocomplete {
     vertical-align: text-top;
     font-size: 18px;
     margin-left: 4px; }
+  .convos-message code {
+    background: #f2f2f2;
+    outline: 1px solid #d9d9d9;
+    padding: 1px 3px; }
   .convos-message .secondary-content {
     position: absolute;
     top: 2px;
