@@ -5,6 +5,7 @@ Revision history for perl distribution Convos
  - Add support for /ns (/msg nickserv)
  - Add support for /cs (/msg chanserv)
  - Add clickable emails
+ - Add support for markdown formatting for <code/>
 
 0.99_08 2016-09-01T22:35:25+0200
  - Fix emitting topic changes to frontend
